lesson5/k8s-log-platform/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: log-platform
  labels:
    app: log-platform
    istio-injection: enabled
